--- a/Web.config
+++ b/Web.config
@@ -3,4 +3,35 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
   </system.web>
+  
+  <connectionStrings>
+    <add name="HarkkaPvk" connectionString="Server=mysql.labranet.jamk.fi;Database=H3100_2;Uid=H3100;Pwd=RiCkbUgrASh5r9y9zpfWSAKQIxynJxZY;"/>
+  </connectionStrings>
+  
+  <!-- Tällä seuraavalla laitetaan autentikointi päälle, eli kielletään autentikoimattomat käyttäjät -->
+  <system.web>
+    <authorization>
+      <deny users="?"/>
+    </authorization>
+    <authentication mode="Forms">
+      <forms loginUrl="~/index.aspx" timeout="300"/>
+    </authentication>
+  </system.web>
+  <!-- Tällä seuraavalle kaikille masterpage käyttöön -->
+  <location path="harjoituspaivakirja.master">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <!-- sallitaan tyylitiedostot -->
+  <location path="css">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+
 </configuration>
