Tehty login ja logout toiminnot

--- a/Web.config
+++ b/Web.config
@@ -14,7 +14,11 @@
       <deny users="?"/>
     </authorization>
     <authentication mode="Forms">
-      <forms loginUrl="~/index.aspx" timeout="300"/>
+      <!--
+      <forms name=".ASPXAUTH" loginUrl="Login.aspx" defaultUrl="Main.aspx" protection="All" timeout="20" path="/">
+      </forms>
+      -->
+      <forms loginUrl="~/index.aspx" defaultUrl="~/index.aspx" timeout="300"/>
     </authentication>
   </system.web>
   <!-- Tällä seuraavalle kaikille masterpage käyttöön -->
