--- a/Web.config
+++ b/Web.config
@@ -37,5 +37,35 @@
       </authorization>
     </system.web>
   </location>
+  <!--Testausta varten, poista alla olevat sivut varsinaisesta-->
+  <location path="lisaaSuoritus.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="selaaSuoritukset.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="suoritus.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="KayttajaTiedot.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
 
 </configuration>
